# lush-all

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  PROJ.md  README.md  TBD.md  TokenTypes.md  auth-workos-github.md  blurb.md  bunfig.toml  glossary.md  lush.md  md.md  menu-api.md  musings.md  node-modules-summary.md  package.json  package.json.md  plan.md  playground.md  progress.md  schema.jq  svelte-susy.md  svelte.md  tauri-auth-server.md
RELEASES/: plan.md
day-summary/: detailled-26-02-04.md
docs/: blurb.md  glossary.md  highlighting-themes.md  language-studio.md  lush-ethos.md  lw-ethos.md  manim.md  perl5.md  pipe.md  projection-dsl.md  snippet-expr-placeholder.md  structural-editor-samples.md  susy-keybinding-handling.md
lush-lang/: README.md  package.json
lush-term-editor/: .gitignore  codex.config.toml  package.json  plan.md  tsconfig.json  vitest.config.ts
lush-types/: .gitignore  codex.config.toml  index.d.ts  index.js  index.ts  leste-token-types.ts  lush2svelte.spec.md  package.json  plan.md  ruleproj-interpreter.md  ruleproj.ts  susy-js-projection.ts  susy-ruleproj-projection.ts  susy-svelte-leste-projection.test.ts  susy-svelte-leste-projection.ts  susy-svelte-projection-cli.ts  susy-svelte-projection.md  susy-svelte-projection.ts  susy-ts-projection.test.ts  susy-ts-projection.ts  susy-yaml-projection.test.ts  susy-yaml-projection.ts  susy-yaml-view.test.ts  susy-yaml-view.ts  token-lists.ts  (+7 more)
tauri-svelte-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-svelte-app/src-tauri/icons/: icon.icns
tauri-svelte-app/src-tauri/src/: main.rs
(+187 files in other folders)
