[package]
name = "tauri-svelte-app"
version = "0.1.0"
description = "Tauri wrapper for the lush SvelteKit app"
authors = ["you"]
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
